--- a/core/templates/web/course-guide.html
+++ b/core/templates/web/course-guide.html
@@ -116,6 +116,11 @@
             <h3>WHY US ?</h3>
             <p>我相信，在恒心之前你可能遇到过那些专注于“雪上加霜”的团队，但千万别因他人的过错，放弃下一个改变自己命运的机会。</p>
         </div>
-        <img src="/static/images/web/courseadvantage.png">
+
+    </div>
+    <div class="container" style="margin-top: -3em;padding-bottom: 3em;">
+    <div class="col-xs-12 text-center">
+        <img src="/static/images/web/courseadvantage.png" style="width: 80%;height: auto;">
+    </div>
     </div>
 {% endblock %}
