--- a/core/templates/web/index.html
+++ b/core/templates/web/index.html
@@ -52,8 +52,12 @@
         <div class="carousel-inner" role="listbox">
             <div class="item active">
                 <img src="/static/images/web/carousel-1.png" style="width: 100%;"  alt="...">
-                <div class="carousel-caption">
-
+                <div class="carousel-caption" style="bottom: 150px;">
+                    <h1 class="carousel-h1 animate-box">恒心教育</h1>
+                    <br/>
+                    <div class="carousel-h2 animate-box"><span>留学群体的一站式管家</span></div>
+                    <br/>
+                    <p class="carousel-p animate-box">HEX, YOUR TROUBLE TERMINATOR.</p>
                 </div>
             </div>
         </div>
