--- a/core/templates/web/mxztc.html
+++ b/core/templates/web/mxztc.html
@@ -236,8 +236,45 @@
             <div class="col-md-8 col-md-offset-2 text-center" style="margin-top: 4em;margin-bottom: 2em;" id="process">
                 <h1>保进办理流程</h1>
             </div>
-            <div class="text-center" style="padding-bottom: 3em;margin-top:-2em;">
-                <img  src="/static/images/web/byztlct.png" style="width:100%;height: auto;" >
+            <div class="col-xs-12 text-center" style="padding-bottom: 3em;margin-top:-2em;">
+                <div style="width: 1200px;">
+                <div class="process-div processbg1" style="z-index: 7; margin-left: 0px;">
+                    <i class="icon-file-text2" style="color: #fff;"></i>
+                    <p>提交资料</p>
+                    <br/>
+                </div>
+                <div class="process-div processbg2" style="z-index:6;">
+                    <i class="icon-search" style="color: #fff;"></i>
+                    <p>选择学校</p>
+                    <br/>
+                </div>
+                <div class="process-div processbg1" style="z-index:5;">
+                    <i class="icon-user" style="color: #fff;"></i>
+                    <p>可行性分析</p>
+                    <br/>
+                </div>
+                <div class="process-div processbg2" style="z-index:4;">
+                    <i class="icon-spinner11" style="color: #fff;"></i>
+                    <p>签约</p>
+                    <br/>
+                </div>
+                <div class="process-div processbg1" style="z-index:3;">
+                    <i class="icon-checkmark" style="color: #fff;"></i>
+                    <p>定金支付</p>
+                    <br/>
+                </div>
+                <div class="process-div processbg2" style="z-index:2;">
+                    <i class="icon-coin-dollar" style="color: #fff;"></i>
+
+                    <p>出具offer后 付清尾款</p>
+{#                    <p></p>#}
+                </div>
+                <div class="process-div processbg1" style="z-index: 1;">
+                    <i class="icon-library" style="color: #fff;"></i>
+                    <p>办理入学手续</p>
+                    <br/>
+                </div>
+                </div>
             </div>
         </div>
     </div>
