--- a/core/templates/web/zygh.html
+++ b/core/templates/web/zygh.html
@@ -10,22 +10,19 @@
 
 {% block content %}
 
-    <div class="container carousel-margin">
-        <div class="row" style="margin-top: 3em;">
-            <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated">
-                <h4>职业规划</h4>
-            </div>
+    <div class="course-header carousel-margin">
+        <img src="/static/images/web/zyghbanner.png">
+    </div>
 
-            <div class="carousel-margin text-center" style="margin-bottom: 3em;">
-                <img src="/static/images/web/testimg1.jpg">
-            </div>
-            <div class="col-md-6 animate-box fadeInUp animated ">
-                <div class="row">
-                    <div class="col-md-12 block-title">
-                        <h4>资历包装</h4>
-                        <p>你的能力与才华不该因为年轻被埋没，恒心联合猎聘网北美总部，开放猎聘人才资源数据库，让你与更优秀的人比肩，收获更多高管名企的青睐。</p>
-                        <h5>合作伙伴</h5>
-                    </div>
+    <div style="background: url(../../static/images/web/twoBg.jpg) repeat-x scroll center bottom;">
+        <div class="container" style="margin-top:0; padding-top: 2em;" >
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated">
+                    <h4>资历包装</h4>
+                    <p>你的能力与才华不该因为年轻被埋没，恒心联合猎聘网北美总部，开放猎聘人才资源数据库，让你与更优秀的人比肩，收获更多高管名企的青睐。</p>
+                </div>
+                <div class="col-xs-12 text-center">
+                    <h1>合作伙伴</h1>
                 </div>
                 <div class="row">
                     <div class="col-md-4">
@@ -41,7 +38,6 @@
                             <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
                             <div class="hexoco-text">
                                 <h2>美国电力</h2>
-{#                                <p>US News Rank 2</p>#}
                             </div>
                         </div>
                     </div>
@@ -50,81 +46,79 @@
                             <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
                             <div class="hexoco-text">
                                 <h2>CVS</h2>
-{#                                <p>US News Rank 2</p>#}
                             </div>
                         </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-md-12 block-title">
-                        <h5>我们的服务</h5>
-                    </div>
-                    <div class="col-md-12">
-                        <div class="feature-left animate-box text-left" data-animate-effect="fadeInLeft">
-                            <span class="icon">
-                                <i class="icon-cloud"></i>
-                            </span>
-                            <div class="feature-copy">
-                                <h4>提供北美就业咨询服务</h4>
-                            </div>
-                        </div>
-
-                        <div class="feature-left animate-box text-left" data-animate-effect="fadeInLeft">
-                            <span class="icon">
-                                <i class="icon-stack"></i>
-                            </span>
-                            <div class="feature-copy">
-                                <h4>开放北美猎聘网人才资源数据库，让你的才华与优秀更快获得名企高管的关注</h4>
-                            </div>
-                        </div>
-
-                        <div class="feature-left animate-box text-left" data-animate-effect="fadeInLeft">
-                            <span class="icon">
-                                <i class="icon-command"></i>
-                            </span>
-                            <div class="feature-copy">
-                                <h4>为想要归国就业的留学生提供职业测评、简历包装、就业与面试指导、岗位推荐等就业初期准备工作</h4>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-md-12 block-title">
-                        <h5>办理流程</h5>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 animate-box fadeInUp animated">
-                 <div class="row">
-                    <div class="col-md-12 block-title">
-                        <h4>就业培训</h4>
-                        <p>海外就业培训是执行美国职业移民(EB-3)计划重要的一环，恒心将为有海外就业或职业移民意向的个人进行评测分流，并根据个人的技能匹配美国相应学校进行短期语言技能与职业技能培训，培训结束后，个人即可凭个人意愿在当地就业，并办理落户，展开美国生活。</p>
-                        <h5>合作伙伴</h5>
+            <div class="row" style ="margin-top:4em;margin-bottom: 2em; ">
+                <div class="col-xs-12 text-center">
+                    <h1>我们的服务</h1>
+                </div>
+                <div class="col-md-4">
+                     <div class="feature-left animate-box " data-animate-effect="fadeInLeft">
+                        <span class="icon">
+                            <i class="icon-cloud"></i>
+                        </span>
+                        <div class="feature-copy">
+                            <p class="zifont" style="margin-top: 10px;">提供北美就业咨询服务</p>
+                        </div>
                     </div>
-                 </div>
-                <div class="row">
-                     <div class="col-md-6">
+                </div>
+                <div class="col-md-4">
+                    <div class="feature-left animate-box " data-animate-effect="fadeInLeft">
+                        <span class="icon">
+                            <i class="icon-cloud"></i>
+                        </span>
+                        <div class="feature-copy">
+                            <p class="zifont" style="margin-top: 10px;">开放北美猎聘网人才资源数据库，让你的才华与优秀更快获得名企高管的关注</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="feature-left animate-box " data-animate-effect="fadeInLeft">
+                        <span class="icon">
+                            <i class="icon-cloud"></i>
+                        </span>
+                        <div class="feature-copy">
+                            <p class="zifont" style="margin-top: 10px;">为想要归国就业的留学生提供职业测评、简历包装、就业与面试指导、岗位推荐等就业初期准备工作</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="row" style="margin-top:3em;">
+                <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated">
+                    <h4>就业培训</h4>
+                    <p>海外就业培训是执行美国职业移民(EB-3)计划重要的一环，恒心将为有海外就业或职业移民意向的个人进行评测分流，并根据个人的技能匹配美国相应学校进行短期语言技能与职业技能培训，培训结束后，个人即可凭个人意愿在当地就业，并办理落户，展开美国生活。</p>
+                </div>
+            </div>
+            <div class="row" style="margin-top:3em;">
+                <div class="col-xs-12 text-center">
+                    <h1>合作伙伴</h1>
+                </div>
+            </div>
+            <div class ="row" style="padding-top:1em;">
+                <div class="col-md-6 col-md-offset-3">
                         <div class="hexoco-project-item">
                             <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
                             <div class="hexoco-text">
                                 <h2>猎聘网</h2>
-                                <p>US News Rank 2</p>
                             </div>
                         </div>
-                    </div>
-                 </div>
-                <div class="row">
-                    <div class="col-md-12 block-title">
-                        <h5>办理流程</h5>
-                    </div>
                 </div>
-
             </div>
-
-
+            <div class="row" style="margin-top:3em;">
+                <div class="col-xs-12 text-center">
+                    <h1>办理流程</h1>
+                </div>
+                <div class="col-xs-12 text-center" style="margin-top: 0;padding-bottom: 2em;">
+                    <img src="/static/images/web/jypxflow.png" style="width: 70%;height: auto">
+                </div>
+            </div>
         </div>
     </div>
+
 
 {% endblock %}
