--- a/core/templates/web/aboutus.html
+++ b/core/templates/web/aboutus.html
@@ -17,8 +17,9 @@
 {#    </script>#}
 {#    <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"#}
 {#    async defer></script>#}
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
-    <script src="/static/js/googlemaps/default.js"></script>
+{#    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>#}
+{#    <script src="/static/js/googlemaps/default.js"></script>#}
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=eyRpYitodqbeGnjrNqxFfdUwfvD19krQ"></script>
 {% endblock %}
 
 {% block content %}
@@ -160,7 +161,25 @@
 
                 </div>
                 <div class="col-md-6" >
-                    <div id="map" style="width: 100%;height:400px;"></div>
+{#                    <div id="map" style="width: 100%;height:400px;"></div>#}
+                        <div id="allmap" style="width: 100%;height:400px;border-radius: 5px;"></div>
+                        <script type="text/javascript">
+                            // 百度地图API功能
+                            var map = new BMap.Map("allmap");
+                            var point = new BMap.Point(104.07449,30.554679);
+                            map.centerAndZoom(point, 15);
+{#                            var marker = new BMap.Marker(point);  // 创建标注#}
+{#                            map.addOverlay(marker);               // 将标注添加到地图中#}
+{#                            marker.setAnimation(BMAP_ANIMATION_BOUNCE); //跳动的动画#}
+                            var marker = new BMap.Marker(point);// 创建标注
+                            map.addOverlay(marker);             // 将标注添加到地图中
+                            marker.disableDragging();
+                            map.addControl(new BMap.NavigationControl());        // 添加平移缩放控件
+                            map.addControl(new BMap.ScaleControl());             // 添加比例尺控件
+                            map.addControl(new BMap.OverviewMapControl());       //添加缩略地图控件
+                            map.enableScrollWheelZoom();                         //启用滚轮放大缩小
+                            map.disable3DBuilding();
+                        </script>
 
                 </div>
             </div>
