--- a/core/templates/web/ksbk.html
+++ b/core/templates/web/ksbk.html
@@ -11,7 +11,7 @@
 {% block content %}
 
     <div class="course-header carousel-margin">
-        <img  src="/static/images/web/ksbkbanner.png">
+        <img  src="/static/images/web/ksbkbanner2.png">
     </div>
     <div class="container" style="margin-top:3em;">
         <div class="row">
@@ -83,9 +83,39 @@
         <div class="col-md-8 col-md-offset-2 text-center animate-box fadeInUp animated"  style="margin-top: 3em;margin-bottom: 2em;">
             <h1>快速本科办理流程</h1>
         </div>
-        <div class="col-xs-12 text-center" style="margin-top: -2em;">
-                <img src="/static/images/web/ksbkflow.png" style="width: 80%;height: auto">
-        </div>
+{#        <div class="col-xs-12 text-center" style="margin-top: -2em;">#}
+{#                <img src="/static/images/web/ksbkflow.png" style="width: 80%;height: auto">#}
+{##}
+{#        </div>#}
+        <div class="col-xs-12 text-center" style="padding-bottom: 3em;margin:-2em auto;text-align: center;">
+                <div  class="col-xs-10 col-xs-offset-1">
+                    <div class="process-div processbg1" style="z-index: 7; margin-left: 0px;">
+                        <i class="icon-file-text2" style="color: #fff;"></i>
+                        <p>提交资料</p>
+                        <br/>
+                    </div>
+                    <div class="process-div processbg2" style="z-index:5;">
+                        <i class="icon-search" style="color: #fff;"></i>
+                        <p>可行性分析</p>
+                        <br/>
+                    </div>
+                    <div class="process-div processbg1" style="z-index:4;">
+                        <i class="icon-user" style="color: #fff;"></i>
+                        <p>录取</p>
+                        <br/>
+                    </div>
+                    <div class="process-div processbg2" style="z-index:3;">
+                        <i class="icon-spinner11" style="color: #fff;"></i>
+                        <p>学分转换</p>
+                        <br/>
+                    </div>
+                    <div class="process-div processbg1" style="z-index: 1;">
+                        <i class="icon-checkmark" style="color: #fff;"></i>
+                        <p>快速毕业</p>
+                        <br/>
+                    </div>
+                </div>
+            </div>
 {#        <div class="row row-bottom-padded-lg">#}
 {#            <div class="col-md-3 col-push-1">#}
 {#                <div class="fh5co-icon"><i class="icon-browser"></i></div>#}
