--- a/core/templates/web/course-guide.html
+++ b/core/templates/web/course-guide.html
@@ -47,7 +47,7 @@
 {% block content %}
 
     <div class="course-header">
-        <img src="/static/images/web/courseheader.png">
+        <img src="/static/images/web/courseguide/1.jpg">
     </div>
 
     <div style="background: #fff; margin-top: 4em;margin-bottom: 3em;">
