--- a/core/templates/inc/master.html
+++ b/core/templates/inc/master.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>四川恒心前途教育咨询有限公司 {% block title %}{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content=""/>
-    <meta name="keywords" content="" />
+    <meta name="description" content="恒心教育，留学群体的一站式管家。致力于向留学生群体提供从海外名校保进、课业辅导、学位认证到移民落户、职业规划、生活辅助的一站式服务。"/>
+    <meta name="keywords" content="学历学位认证 生活辅助 名校直通 海外留学 留学 名校保进 移民落户 落户 职业规划 快速本科 游学 夏令营 冬令营" />
     <link rel="shortcut icon" href="/static/images/web/favicon.ico" />
 
     <link rel="stylesheet" href="/static/css/headercss/animate.css">
@@ -24,7 +24,15 @@
     <script src="/static/js/headerjs/jquery.fancybox.min.js"></script>
     <script src="/static/js/headerjs/modernizr-2.6.2.min.js"></script>
     {#    <script src="/static/js/headerjs/selectivizr.js"></script>#}
-
+    <!--[if lte IE 9]>
+        <script type="text/javascript">
+            $(document).ready(function () {
+                $(".animate-box").removeClass("animate-box");
+                $(".carousel-margin").addClass("carousel-ms-margin");
+                $(".carousel-margin").removeClass("carousel-margin");
+            });
+        </script>
+    <![endif]-->
     {% block head %}
 
     {% endblock %}
@@ -212,15 +220,7 @@
 <script src="/static/js/headerjs/jquery.magnific-popup.min.js"></script>
 <script src="/static/js/headerjs/magnific-popup-options.js"></script>
 <script src="/static/js/headerjs/main.js"></script>
-<!–[if lt IE 9]>
-    <script>
-        $(document).ready(function () {
-            $(".animate-box").removeClass("animate-box");
-{#            $(".carousel-margin").addClass("carousel-ms-margin");#}
-{#            $(".carousel-margin").removeClass("carousel-margin");#}
-        });
-    </script>
-<![endif]–>
+
 </body>
 </html>
 
