--- a/core/templates/web/highschool.html
+++ b/core/templates/web/highschool.html
@@ -48,11 +48,11 @@
 
     <div class="container" style="margin-top:3em;">
         <div class="row">
-            <div class="col-md-8 col-md-offset-2 text-center heading-section" id="highschool">
+            <div class="col-xs-8 col-xs-offset-2 text-center heading-section" id="highschool">
                 <h4>海外高中</h4>
             </div>
 
-            <div class="col-md-6">
+            <div class="col-xs-6">
                 <div class="hxco-video hxco-bg" style="background-image: url(../../static/images/web/highschool/2.jpg); ">
 {#						<a href="#" class="popup-vimeo"><i class="icon-video2"></i></a>#}
                 </div>
@@ -69,7 +69,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-xs-6">
                 <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                     <span class="icon">
                         <i class="icon-cloud"></i>
@@ -108,13 +108,13 @@
             </div>
 
 
-            <div class="col-md-8 col-md-offset-2 text-center heading-section" id="Columbia" style="margin-top: 4em;">
+            <div class="col-xs-8 col-xs-offset-2 text-center heading-section" id="Columbia" style="margin-top: 4em;">
                 <h4>直通高中-哥伦比亚中学</h4>
             </div>
-             <div class="col-md-8 col-md-offset-2 text-center" style="margin-top:-3em;">
+             <div class="col-xs-8 col-xs-offset-2 text-center" style="margin-top:-3em;">
                  <p>哥伦比亚中学（Columbia Academy Vancouver Canada），地处温哥华市中心，除却加拿大BC省教育部批准的课程、颁发BC省高中毕业文凭、教师均为持BC省教师牌照的加拿大注册教师之外，哥伦比亚中学与一般公立中学相比，还具有以下明显优势:</p>
              </div>
-            <div class="col-md-12 col-xs-12 table-responsive">
+            <div class="col-xs-12 col-xs-12 table-responsive">
                 <table class="table table-bordered table-hover">
                     <tr class ="info">
                         <th class="text-center">对比项</th>
@@ -175,7 +175,7 @@
                 </table>
             </div>
 
-{#            <div class="col-md-4 animate-box fadeInUp animated">#}
+{#            <div class="col-xs-4 animate-box fadeInUp animated">#}
 {#                <div class="hexoco-project-item">#}
 {#                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">#}
 {#                    <div class="hexoco-text">#}
@@ -184,7 +184,7 @@
 {#                    </div>#}
 {#                </div>#}
 {#            </div>#}
-{#            <div class="col-md-4 animate-box fadeInUp animated">#}
+{#            <div class="col-xs-4 animate-box fadeInUp animated">#}
 {#                <div class="hexoco-project-item">#}
 {#                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">#}
 {#                    <div class="hexoco-text">#}
@@ -193,7 +193,7 @@
 {#                    </div>#}
 {#                </div>#}
 {#            </div>#}
-{#            <div class="col-md-4 animate-box fadeInUp animated">#}
+{#            <div class="col-xs-4 animate-box fadeInUp animated">#}
 {#                <div class="hexoco-project-item">#}
 {#                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">#}
 {#                    <div class="hexoco-text">#}
@@ -204,13 +204,13 @@
 {#            </div>#}
 
 
-{#            <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated" style="margin-top: 3em;">#}
+{#            <div class="col-xs-8 col-xs-offset-2 text-center heading-section animate-box fadeInUp animated" style="margin-top: 3em;">#}
 {#                <h3>美国高中申请</h3>#}
 {#                <p>恒心前途登陆计划应低龄留学生群体的实际需求，帮助每个小留学生制订适应自身发展需求的长远的从留学到就业的规划，并提供从生活到学术的针对个体的介入辅导和咨询服务。#}
 {#                    我们具体的服务内容包括选校申请咨询，申请材料准备，申请文书美化，面试模拟与辅导，生活辅导，学业辅导等。#}
 {#                </p>#}
 {#            </div>#}
-{#            <div class="col-md-6 animate-box fadeInUp animated">#}
+{#            <div class="col-xs-6 animate-box fadeInUp animated">#}
 {#                <div class="hexoco-project-item">#}
 {#                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">#}
 {#                    <div class="hexoco-text">#}
@@ -220,7 +220,7 @@
 {#                </div>#}
 {#            </div>#}
 {##}
-{#            <div class="col-md-6 animate-box fadeInUp animated">#}
+{#            <div class="col-xs-6 animate-box fadeInUp animated">#}
 {#                <div class="hexoco-project-item">#}
 {#                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">#}
 {#                    <div class="hexoco-text">#}
@@ -230,7 +230,7 @@
 {#                </div>#}
 {#            </div>#}
 
-            <div class="col-md-8 col-md-offset-2 text-center heading-section" id="process" style="margin-top: 4em;">
+            <div class="col-xs-8 col-xs-offset-2 text-center heading-section" id="process" style="margin-top: 4em;">
                 <h4>海外高中申请流程</h4>
             </div>
             <div class="col-xs-12 text-center">
@@ -240,10 +240,10 @@
             </div>
 
 {#            <div class="row row-bottom-padded-lg">#}
-{#                <div class="col-md-3 col-push-1">#}
+{#                <div class="col-xs-3 col-push-1">#}
 {#                    <div class="fh5co-icon"><i class="icon-browser"></i></div>#}
 {#                </div>#}
-{#                <div class="col-md-8 col-md-push-1">#}
+{#                <div class="col-xs-8 col-xs-push-1">#}
 {#                    <h4 class="fh5co-number">01.</h4>#}
 {#                    <h2 class="numberh2">申请前评估</h2>#}
 {#                    <p class="numberp">Lorem ipsum dolor sit amet</p>#}
@@ -254,7 +254,7 @@
 {#                </div>#}
 {#            </div>#}
 {#            <div class="row row-bottom-padded-lg">#}
-{#                <div class="col-xs-push-2 col-md-8">#}
+{#                <div class="col-xs-push-2 col-xs-8">#}
 {#                    <h4 class="fh5co-number">02.</h4>#}
 {#                    <h2>选定目标学校</h2>#}
 {#                    <p>Lorem ipsum dolor sit amet,  recusandae voluptatum necessitatibus provident commodi?</p>#}
@@ -262,15 +262,15 @@
 {#                        <li>综合学生实力和意愿，选定目标学校 </li>#}
 {#                    </ul>#}
 {#                </div>#}
-{#                <div class="col-md-3 col-md-push-1">#}
+{#                <div class="col-xs-3 col-xs-push-1">#}
 {#                    <div class="fh5co-icon"><i class="icon-mobile"></i></div>#}
 {#                </div>#}
 {#            </div>#}
 {#            <div class="row row-bottom-padded-lg">#}
-{#                <div class="col-md-3 col-push-1">#}
+{#                <div class="col-xs-3 col-push-1">#}
 {#                    <div class="fh5co-icon"><i class="icon-browser" style="width: 100%;height: auto;"></i></div>#}
 {#                </div>#}
-{#                <div class="col-md-8 col-md-push-1">#}
+{#                <div class="col-xs-8 col-xs-push-1">#}
 {#                    <h4 class="fh5co-number">03.</h4>#}
 {#                    <h2 class="numberh2">制订申请方案</h2>#}
 {#                    <p class="numberp">Lorem ipsum dolor sit amet</p>#}
@@ -280,7 +280,7 @@
 {#                </div>#}
 {#            </div>#}
 {#            <div class="row row-bottom-padded-lg">#}
-{#                <div class="col-xs-push-2 col-md-8">#}
+{#                <div class="col-xs-push-2 col-xs-8">#}
 {#                    <h4 class="fh5co-number">04.</h4>#}
 {#                    <h2>申请材料准备</h2>#}
 {#                    <p>Lorem ipsum dolor sit amet,  recusandae voluptatum necessitatibus provident commodi?</p>#}
@@ -289,15 +289,15 @@
 {#                        <li>必要时提供考试辅导和背景提升服务</li>#}
 {#                    </ul>#}
 {#                </div>#}
-{#                <div class="col-md-3 col-md-push-1">#}
+{#                <div class="col-xs-3 col-xs-push-1">#}
 {#                    <div class="fh5co-icon"><i class="icon-mobile"></i></div>#}
 {#                </div>#}
 {#            </div>#}
 {#            <div class="row row-bottom-padded-lg">#}
-{#                <div class="col-md-3 col-push-1">#}
+{#                <div class="col-xs-3 col-push-1">#}
 {#                    <div class="fh5co-icon"><i class="icon-browser" style="width: 100%;height: auto;"></i></div>#}
 {#                </div>#}
-{#                <div class="col-md-8 col-md-push-1">#}
+{#                <div class="col-xs-8 col-xs-push-1">#}
 {#                    <h4 class="fh5co-number">05.</h4>#}
 {#                    <h2 class="numberh2">申请方案实施</h2>#}
 {#                    <p class="numberp">Lorem ipsum dolor sit amet</p>#}
