--- a/core/templates/web/information_detail.html
+++ b/core/templates/web/information_detail.html
@@ -12,7 +12,7 @@
 {% block content %}
     <div class="container" style="margin: 68px auto auto;min-width: 1240px;">
         <div class="row text-center"  style=" margin-top:2em;">
-            <div class="col-md-12 article-title text-left animate-box fadeInUp animated">
+            <div class="col-xs-12 article-title text-left animate-box fadeInUp animated">
                 <h1>{{ act.title }}</h1>
             </div>
         </div>
