--- a/core/templates/web/studytour.html
+++ b/core/templates/web/studytour.html
@@ -17,19 +17,19 @@
     <div style="background: url(../../static/images/web/twoBg.jpg) repeat-x scroll center bottom;">
         <div class="container" style="margin-top:3em;" >
             <div class="row">
-                <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated">
+                <div class="col-xs-8 col-xs-offset-2 text-center heading-section animate-box fadeInUp animated">
                     <h4>游学夏（冬）令营</h4>
                     <p> 如果你还没做好异乡求学四年的准备却又想要充实内在，见识大千世界，恒心游学夏（冬）令营将是你的最佳选择。三个月海外短期游学计划，让你在自西向东领略美国独特人文的同时，还能在丹佛名校充电进修，体验留学生活，成为美国独特人文的一部分。</p>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-md-12 text-center" style="margin-bottom: 2em;">
+                <div class="col-xs-12 text-center" style="margin-bottom: 2em;">
                     <h1>景点安排</h1>
                 </div>
 
                 <div class="row" style=" margin-top: 4em;">
-                    <div class="col-md-4 animate-box fadeInUp animated ">
+                    <div class="col-xs-4 animate-box fadeInUp animated ">
                         <div class="hexoco-project-item">
                             <img src="/static/images/web/tour/t1.jpg" width="100%" alt="Image" class="img-responsive">
                             <div class="hexoco-text">
@@ -38,7 +38,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 animate-box fadeInUp animated">
+                    <div class="col-xs-4 animate-box fadeInUp animated">
                         <div class="hexoco-project-item">
                             <img src="/static/images/web/tour/t2.jpg" width="100%" alt="Image" class="img-responsive">
                             <div class="hexoco-text">
@@ -47,7 +47,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 animate-box fadeInUp animated">
+                    <div class="col-xs-4 animate-box fadeInUp animated">
                         <div class="hexoco-project-item">
                             <img src="/static/images/web/tour/t3.jpg" width="100%" alt="Image" class="img-responsive">
                             <div class="hexoco-text">
