--- a/core/templates/web/aboutus.html
+++ b/core/templates/web/aboutus.html
@@ -25,7 +25,7 @@
 {% block content %}
     <div class="container" >
         <div class="row" style="margin-top: 3em;">
-            <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated">
+            <div class="col-xs-8 col-xs-offset-2 text-center heading-section animate-box fadeInUp animated">
                 <h3>关于恒心</h3>
                 <p>恒心教育，留学群体的一站式管家</p>
                 <p>我们向留学生群体提供从名校直通、课业辅导、学历学位认证到职业规划，创业贷款申请指导、生活辅助的一站式服务。同时，还针对国内有留学意愿的群体，开通了海外短期游学、就业培训、移民落户指导等项目。</p>
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6 animate-box fadeInUp animated">
+            <div class="col-xs-6 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
                         <img src="/static/images/web/about/1.jpg" width="100%" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
@@ -46,7 +46,7 @@
                     </div>
                 </div>
 
-            <div class="col-md-6 animate-box fadeInUp animated">
+            <div class="col-xs-6 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
                     <img src="/static/images/web/about/2.jpg" width="100%" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6 animate-box fadeInUp animated">
+            <div class="col-xs-6 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
                         <img src="/static/images/web/about/3.jpg" width="100%" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
@@ -72,7 +72,7 @@
                     </div>
                 </div>
 
-            <div class="col-md-6 animate-box fadeInUp animated">
+            <div class="col-xs-6 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
                     <img src="/static/images/web/about/4.jpg" width="100%" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
@@ -86,10 +86,10 @@
                 </div>
             </div>
             <div class="row" style="margin-top: 5em;">
-                <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated">
+                <div class="col-xs-8 col-xs-offset-2 text-center heading-section animate-box fadeInUp animated">
                     <h4>我们的客户有话说</h4>
                 </div>
-                <div class="col-md-6">
+                <div class="col-xs-6">
                     <div class="fh5co-testimonial text-center animate-box fadeInUp animated">
                         <figure>
                             <img src="/static/images/person_1.jpg" alt="user">
@@ -100,7 +100,7 @@
                         <span>--李同学</span>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-xs-6">
                     <div class="fh5co-testimonial text-center animate-box fadeInUp animated">
                         <figure>
                             <img src="/static/images/person_2.jpg" alt="user">
@@ -111,13 +111,13 @@
                         <span>--吴同学</span>
                     </div>
                 </div>
-{#                <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated" style="margin-top: 3em;">#}
+{#                <div class="col-xs-8 col-xs-offset-2 text-center heading-section animate-box fadeInUp animated" style="margin-top: 3em;">#}
 {#                    <h4>留学云计算+大数据平台</h4>#}
 {#                </div>#}
 {#                <div class="text-center">#}
 {#                    <img src="/static/images/web/yjs.png">#}
 {#                </div>#}
-                <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated" style="margin-top: 5em;">
+                <div class="col-xs-8 col-xs-offset-2 text-center heading-section animate-box fadeInUp animated" style="margin-top: 5em;">
                     <h4>招商与合作</h4>
                     <p>不论你是有我们尚缺的同类型业务，还是想要完善自己的版图，只要你有意愿帮助到更多的留学群体，都欢迎你联系我们，洽谈合作。</p>
                 </div>
@@ -127,11 +127,11 @@
 
 
             </div>
-            <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated" style="margin-top: 3em;">
+            <div class="col-xs-8 col-xs-offset-2 text-center heading-section animate-box fadeInUp animated" style="margin-top: 3em;">
                 <h4>联系我们</h4>
             </div>
             <div class="row" style ="margin-bottom: 3em;">
-                <div class="col-md-6 animate-box fadeInUp animated">
+                <div class="col-xs-6 animate-box fadeInUp animated">
                     <div class="feature-left">
 						<span class="icon">
 							<i class="icon-phone"></i>
@@ -159,7 +159,7 @@
 					</div>
 
                 </div>
-                <div class="col-md-6" >
+                <div class="col-xs-6" >
 {#                    <div id="map" style="width: 100%;height:400px;"></div>#}
                         <div id="allmap" style="width: 100%;height:400px;border-radius: 5px;"></div>
                         <script type="text/javascript">
