--- a/core/templates/web/assistedliving.html
+++ b/core/templates/web/assistedliving.html
@@ -52,25 +52,25 @@
         <div class="container">
             <div class="js-navbar-scrollspy">
                 <ul class="nav am-tabs-nav">
-                    <li class="col-md-4"><a href="#as">
-                        <div class="col-md-3 col-sm-3 ">
+                    <li class="col-xs-4"><a href="#as">
+                        <div class="col-xs-3 col-sm-3 ">
                             <i class="icon-truck"></i>
                         </div>
-                        <div class="col-md-9 col-sm-9 text-left">
+                        <div class="col-xs-9 col-sm-9 text-left">
                             <strong class="nav-text">免税车购置服务</strong>
                         </div></a></li>
-                    <li class="col-md-4"><a href="#weiguanjia">
-                        <div class="col-md-3 col-sm-3 ">
+                    <li class="col-xs-4"><a href="#weiguanjia">
+                        <div class="col-xs-3 col-sm-3 ">
                             <i class="icon-home3"></i>
                         </div>
-                        <div class="col-md-9 col-sm-9 text-left">
+                        <div class="col-xs-9 col-sm-9 text-left">
                             <strong class="nav-text">恒心微管家</strong>
                         </div></a></li>
-                    <li class="col-md-4"><a href="#loanid">
-                        <div class="col-md-3 col-sm-3 ">
+                    <li class="col-xs-4"><a href="#loanid">
+                        <div class="col-xs-3 col-sm-3 ">
                             <i class="icon-coin-yen"></i>
                         </div>
-                        <div class="col-md-9 col-sm-9 text-left">
+                        <div class="col-xs-9 col-sm-9 text-left">
                             <strong class="nav-text">创业贷款申请指导</strong>
                         </div></a></li>
                 </ul>
@@ -87,13 +87,13 @@
 
         <div class="container" style="padding-top:3em;position: relative;" >
             <div class="row" id="as">
-                <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated">
+                <div class="col-xs-8 col-xs-offset-2 text-center heading-section animate-box fadeInUp animated">
                     <h4>免税车购置服务</h4>
                     <p>生活辅助——留学生免税车购置服务</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-12 text-center">
+                <div class="col-xs-12 text-center">
                     <h1>凡符合国家政策规定的留学人员，购买国产汽车可享受以下的税收优惠：</h1>
                 </div>
 
@@ -109,13 +109,13 @@
 
 
             <div class="row">
-                <div class="col-md-12 text-center" style="margin-top:3em;">
+                <div class="col-xs-12 text-center" style="margin-top:3em;">
                     <h1>申报条件</h1>
                 </div>
             </div>
 
             <div class="row" style="margin-top: 3em;">
-                <div class="col-md-6">
+                <div class="col-xs-6">
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                         <span class="icon">
                             <i class="icon-quill"></i>
@@ -143,7 +143,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-xs-6">
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                         <span class="icon">
                             <i class="icon-attachment"></i>
@@ -236,13 +236,13 @@
     <div style="background: #efefef;" >
         <div class="container" style="padding-top:3em;"  id="weiguanjia" >
             <div class="row">
-                <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated" >
+                <div class="col-xs-8 col-xs-offset-2 text-center heading-section animate-box fadeInUp animated" >
                     <h4>恒心微管家</h4>
                     <p>恒心微管家——恒心会员最贴心的免费福利，精心料理你留学路上的衣食住行。</p>
                 </div>
             </div>
             <div class="row" style=" margin-top: 3em;">
-                <div class="col-md-4 animate-box fadeInUp animated ">
+                <div class="col-xs-4 animate-box fadeInUp animated ">
                     <div class="hexoco-project-item">
                         <img src="/static/images/web/live/2.jpg" width="100%" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
@@ -251,7 +251,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 animate-box fadeInUp animated">
+                <div class="col-xs-4 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
                         <img src="/static/images/web/live/3.jpg" width="100%" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
@@ -260,7 +260,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 animate-box fadeInUp animated">
+                <div class="col-xs-4 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
                         <img src="/static/images/web/live/4.jpg" width="100%" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
@@ -269,7 +269,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 animate-box fadeInUp animated">
+                <div class="col-xs-4 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
                         <img src="/static/images/web/live/5.jpg" width="100%" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
@@ -278,7 +278,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 animate-box fadeInUp animated">
+                <div class="col-xs-4 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
                         <img src="/static/images/web/live/6.jpg" width="100%" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
@@ -292,7 +292,7 @@
                 <div class="col-xs-12 text-center">
                     <h1>恒心微管家——服务首轮享受对象</h1>
                 </div>
-                <div class="col-md-4">
+                <div class="col-xs-4">
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
                                 <i class="icon-bookmarks"></i>
@@ -302,7 +302,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-xs-4">
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
                                 <i class="icon-earth"></i>
@@ -312,7 +312,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-xs-4">
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
                                 <i class="icon-user"></i>
@@ -328,20 +328,20 @@
 {#    <div style="background: #fff;position: relative;"><label id="loanid" style="font-size:83px;">&nbsp;</label></div>#}
     <div class="container" style="padding-top:3em;position: relative;" id="loanid" >
         <div class="row">
-            <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated">
+            <div class="col-xs-8 col-xs-offset-2 text-center heading-section animate-box fadeInUp animated">
                 <h4>创业贷款申请指导</h4>
                 <p>恒心提供创业贷款代申请服务，利用自身众多创业项目与对政策的精准把控程度，快速完成相关扶持资金的审批流程与下发，让创业者将时间和精力专心投入事业。</p>
             </div>
         </div>
 
         <div class="row">
-            <div class="col-md-12 text-center" style=" margin-bottom: 2em;">
+            <div class="col-xs-12 text-center" style=" margin-bottom: 2em;">
                 <h1>创业贷款类型</h1>
                 <p>恒心提供以下贷款政策解读答疑，并提供普通创业贷款代申请服务</p>
             </div>
 
             <div class="row" style=" margin-top: 4em;">
-                <div class="col-md-3 animate-box fadeInUp animated ">
+                <div class="col-xs-3 animate-box fadeInUp animated ">
                     <div class="hexoco-project-item">
                         <img src="/static/images/web/loan-1.png" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
@@ -349,7 +349,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 animate-box fadeInUp animated">
+                <div class="col-xs-3 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
                         <img src="/static/images/web/loan-2.png" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
@@ -357,7 +357,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 animate-box fadeInUp animated">
+                <div class="col-xs-3 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
                         <img src="/static/images/web/loan-3.png" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
@@ -365,7 +365,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 animate-box fadeInUp animated">
+                <div class="col-xs-3 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
                         <img src="/static/images/web/loan-4.png" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
@@ -373,7 +373,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 animate-box fadeInUp animated">
+                <div class="col-xs-3 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
                         <img src="/static/images/web/loan-5.png" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
@@ -381,7 +381,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 animate-box fadeInUp animated">
+                <div class="col-xs-3 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
                         <img src="/static/images/web/loan-6.png" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
@@ -389,7 +389,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 animate-box fadeInUp animated">
+                <div class="col-xs-3 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
                         <img src="/static/images/web/loan-7.png" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
