--- a/core/templates/web/certification.html
+++ b/core/templates/web/certification.html
@@ -15,12 +15,12 @@
     <div style="">
         <div class="container" style="margin-top:3em;">
             <div class="row">
-                <div class="col-md-8 col-md-offset-2 text-center heading-section" id="highschool">
+                <div class="col-xs-8 col-xs-offset-2 text-center heading-section" id="highschool">
                     <h4>学历学位认证</h4>
                     <p>既然当初踌躇满志的去了，哪有半途而废败兴而退的道理？恒心定制专业认证解决方案，一定让你满载而归。</p>
                 </div>
 
-                <div class="col-md-6">
+                <div class="col-xs-6">
                     <div class="hxco-video hxco-bg" style="background-image: url(../../static/images/web/certification/1.jpg); ">
     {#						<a href="#" class="popup-vimeo"><i class="icon-video2"></i></a>#}
                     </div>
@@ -36,7 +36,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-xs-6">
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                         <span class="icon">
                             <i class="icon-quill"></i>
@@ -66,13 +66,13 @@
 {#                    <h3>什么情况会认证受阻？</h3>#}
 {#                </div>#}
                 <div class="row">
-                    <div class="col-md-12 text-center"  style="margin-bottom: 3em;">
+                    <div class="col-xs-12 text-center"  style="margin-bottom: 3em;">
                         <h1>什么情况会认证受阻?</h1>
                     </div>
 
                 </div>
                 <div class="row" style="">
-                    <div class="col-md-6">
+                    <div class="col-xs-6">
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
                                 <i class="icon-cross"></i>
@@ -100,7 +100,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-xs-6">
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
                                 <i class="icon-cross"></i>
@@ -135,19 +135,19 @@
         </div>
         <div class="container" style="margin-top:3em;">
             <div class="row">
-{#                <div class="col-md-8 col-md-offset-2 text-center heading-section" id="highschool">#}
+{#                <div class="col-xs-8 col-xs-offset-2 text-center heading-section" id="highschool">#}
 {#                    <h4>Why Us ?</h4>#}
 {#                    <h4>为什么选择我们?</h4>#}
 {#                </div>#}
 
                 <div class="row">
-                    <div class="col-md-12 text-center" id="highschool" style="margin-bottom: 3em;">
+                    <div class="col-xs-12 text-center" id="highschool" style="margin-bottom: 3em;">
                         <h1>为什么选择我们?</h1>
                     </div>
 
                 </div>
 
-                <div class="col-md-6">
+                <div class="col-xs-6">
                     <div class="hxco-video hxco-bg" style="background-image: url(../../static/images/web/certification/2.jpg); ">
     {#						<a href="#" class="popup-vimeo"><i class="icon-video2"></i></a>#}
                     </div>
@@ -163,7 +163,7 @@
 {#                        </div>#}
 {#                    </div>#}
                 </div>
-                <div class="col-md-6">
+                <div class="col-xs-6">
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                         <span class="icon">
                             <i class="icon-leaf"></i>
@@ -214,17 +214,17 @@
 
         <div class="container" style="margin-top: 5em;">
 {#            <div class="row">#}
-{#                <div class="col-md-8 col-md-offset-2 text-center heading-section">#}
+{#                <div class="col-xs-8 col-xs-offset-2 text-center heading-section">#}
 {#                    <h4>申请学历学位认证所需材料</h4>#}
 {#                </div>#}
 {#            </div>#}
             <div class="row">
-                    <div class="col-md-12 text-center"  style="margin-bottom: 3em;">
+                    <div class="col-xs-12 text-center"  style="margin-bottom: 3em;">
                         <h1>申请学历学位认证所需材料</h1>
                     </div>
 
                 </div>
-            <div class="col-md-6">
+            <div class="col-xs-6">
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
                                 <i class="icon-profile"></i>
@@ -252,7 +252,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-xs-6">
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
                                 <i class="icon-file-text2"></i>
@@ -275,12 +275,12 @@
 
         <div class="container" style="margin-top: 3em;">
 {#            <div class="row">#}
-{#                <div class="col-md-8 col-md-offset-2 text-center heading-section">#}
+{#                <div class="col-xs-8 col-xs-offset-2 text-center heading-section">#}
 {#                    <h4>申请所需流程</h4>#}
 {#                </div>#}
 {#            </div>#}
             <div class="row">
-                <div class="col-md-12 text-center"  style="margin-bottom: 3em;">
+                <div class="col-xs-12 text-center"  style="margin-bottom: 3em;">
                     <h1>申请所需流程</h1>
                 </div>
                 <div class="col-xs-12 text-center" style="margin-top: -2em;">
