--- a/core/templates/web/information.html
+++ b/core/templates/web/information.html
@@ -12,7 +12,7 @@
 {% block content %}
     <div class="container">
         <div class="row" style="margin-top: 3em;">
-            <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated">
+            <div class="col-xs-8 col-xs-offset-2 text-center heading-section animate-box fadeInUp animated">
                 <h4>行业资讯</h4>
                 <p>恒心为您提供最新的新闻资讯以及留学的小知识</p>
             </div>
@@ -94,7 +94,7 @@
         </div>
     </div>
     {#        <div class="row">#}
-    {#            <div class="col-md-8">#}
+    {#            <div class="col-xs-8">#}
     {#                <div>#}
     {#                    <div class="col-xs-12 col-sm-2 text-center">#}
     {#                        <div class="entry-meta text-center">#}
@@ -139,7 +139,7 @@
     {#                </div>#}
     {#            </div>#}
     {#            </div>#}
-    {#            <div class="col-md-4 text-left">#}
+    {#            <div class="col-xs-4 text-left">#}
     {#                <div class="widget categories">#}
     {#                    <h3>推荐文章</h3>#}
     {#                    <div class="row">#}
