--- a/core/templates/web/mxztc.html
+++ b/core/templates/web/mxztc.html
@@ -80,17 +80,17 @@
 
     <div class="container" style="margin-top:3em;">
         <div class="row">
-            <div class="col-md-8 col-md-offset-2 text-center heading-section" id="mxztc">
+            <div class="col-xs-8 col-xs-offset-2 text-center heading-section" id="mxztc">
                 <h3>名校保进直通车</h3>
                 <p>
                     如果你有颗名校深造的心，却没有进得去TOP100的成绩，恒心就来带你体验弯道超车的快感。
                 </p>
             </div>
 
-            <div class="col-md-8 col-md-offset-2 text-center" id="usa" style="margin-top: 4em;margin-bottom: 2em;">
+            <div class="col-xs-8 col-xs-offset-2 text-center" id="usa" style="margin-top: 4em;margin-bottom: 2em;">
                 <h1>美国保进名校</h1>
             </div>
-            <div class="col-md-4 animate-box fadeInUp animated ">
+            <div class="col-xs-4 animate-box fadeInUp animated ">
                 <div class="hexoco-project-item">
                     <img src="/static/images/web/mx/1.jpg" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
@@ -99,7 +99,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 animate-box fadeInUp animated">
+            <div class="col-xs-4 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
                     <img src="/static/images/web/mx/2.jpg" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
@@ -108,7 +108,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 animate-box fadeInUp animated">
+            <div class="col-xs-4 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
                     <img src="/static/images/web/mx/3.jpg" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
@@ -117,7 +117,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 animate-box fadeInUp animated">
+            <div class="col-xs-4 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
                     <img src="/static/images/web/mx/4.jpg" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
@@ -126,7 +126,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 animate-box fadeInUp animated">
+            <div class="col-xs-4 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
                     <img src="/static/images/web/mx/5.jpg" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
@@ -135,7 +135,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 animate-box fadeInUp animated">
+            <div class="col-xs-4 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
                     <img src="/static/images/web/mx/6.jpg" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
@@ -144,7 +144,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 animate-box fadeInUp animated">
+            <div class="col-xs-4 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
                     <img src="/static/images/web/mx/7.jpg" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
@@ -153,7 +153,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 animate-box fadeInUp animated">
+            <div class="col-xs-4 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
                     <img src="/static/images/web/mx/8.jpg" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
@@ -162,7 +162,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 animate-box fadeInUp animated">
+            <div class="col-xs-4 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
                     <img src="/static/images/web/mx/9.jpg" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
@@ -172,10 +172,10 @@
                 </div>
             </div>
 
-            <div class="col-md-8 col-md-offset-2 text-center" id="canada" style="margin-top: 4em;margin-bottom: 2em;">
+            <div class="col-xs-8 col-xs-offset-2 text-center" id="canada" style="margin-top: 4em;margin-bottom: 2em;">
                 <h1>加拿大保进名校</h1>
             </div>
-            <div class="col-md-4 animate-box fadeInUp animated">
+            <div class="col-xs-4 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
                     <img src="/static/images/web/mx/10.jpg" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
@@ -185,7 +185,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 animate-box fadeInUp animated">
+            <div class="col-xs-4 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
                     <img src="/static/images/web/mx/11.jpg" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
@@ -193,7 +193,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 animate-box fadeInUp animated">
+            <div class="col-xs-4 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
                     <img src="/static/images/web/mx/12.jpg" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
@@ -204,12 +204,12 @@
             </div>
 
             <div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center" id="material" style="margin-top:4em;margin-bottom: 2em">
+				<div class="col-xs-8 col-xs-offset-2 text-center" id="material" style="margin-top:4em;margin-bottom: 2em">
 					<h1>申请学校所需材料</h1>
 				</div>
 			</div>
             <div class="row" style="">
-				<div class="col-md-6">
+				<div class="col-xs-6">
 					<div class="feature-left">
 						<span class="icon">
 							<i class="icon-file-text2"></i>
@@ -220,7 +220,7 @@
 						</div>
 					</div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-xs-6">
                     <div class="feature-left">
 						<span class="icon">
 							<i class="icon-onedrive"></i>
@@ -233,7 +233,7 @@
                 </div>
             </div>
 
-            <div class="col-md-8 col-md-offset-2 text-center" style="margin-top: 4em;margin-bottom: 2em;" id="process">
+            <div class="col-xs-8 col-xs-offset-2 text-center" style="margin-top: 4em;margin-bottom: 2em;" id="process">
                 <h1>保进办理流程</h1>
             </div>
             <div class="col-xs-12 text-center" style="padding-bottom: 3em;margin-top:-2em;">
