--- a/core/templates/web/zygh.html
+++ b/core/templates/web/zygh.html
@@ -17,7 +17,7 @@
     <div style="background: url(../../static/images/web/twoBg.jpg) repeat-x scroll center bottom;">
         <div class="container" style="margin-top:0; padding-top: 2em;" >
             <div class="row">
-                <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated">
+                <div class="col-xs-8 col-xs-offset-2 text-center heading-section animate-box fadeInUp animated">
                     <h4>资历包装</h4>
                     <p>你的能力与才华不该因为年轻被埋没，恒心联合猎聘网北美总部，开放猎聘人才资源数据库，让你与更优秀的人比肩，收获更多高管名企的青睐。</p>
                 </div>
@@ -25,30 +25,35 @@
                     <h1>合作伙伴</h1>
                 </div>
                 <div class="row">
-                    <div class="col-md-4">
-                        <div class="hexoco-project-item">
-                            <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                    <div class="col-xs-4">
+                         <a href="https://www.macysinc.com/" target="_blank">
+                        <div class="hexoco-project-item text-center" style="margin:0 auto; text-align:center">
+                            <img src="/static/images/web/zygh/Macy's.png" style="margin:20px auto auto auto;" alt="Image" class="img-responsive">
                             <div class="hexoco-text">
-                                <h2>五月百货</h2>
+                                <h2>梅西百货</h2>
                             </div>
                         </div>
+                         </a>
                     </div>
-                    <div class="col-md-4">
-
-                        <div class="hexoco-project-item">
-                            <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
-                            <div class="hexoco-text">
-                                <h2>美国电力</h2>
+                    <div class="col-xs-4">
+                        <a href="https://www.aep.com/" target="_blank">
+                            <div class="hexoco-project-item">
+                                <img src="/static/images/web/zygh/us_elecric.png" style="margin:20px auto auto auto;" alt="Image" class="img-responsive">
+                                <div class="hexoco-text">
+                                    <h2>美国电力</h2>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-xs-4">
+                        <a href="https://www.cvshealth.com/" target="_blank">
                         <div class="hexoco-project-item">
-                            <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                            <img src="/static/images/web/zygh/cvs.png" style="margin:20px auto auto auto;" alt="Image"  class="img-responsive">
                             <div class="hexoco-text">
                                 <h2>CVS</h2>
                             </div>
                         </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -56,7 +61,7 @@
                 <div class="col-xs-12 text-center">
                     <h1>我们的服务</h1>
                 </div>
-                <div class="col-md-4">
+                <div class="col-xs-4">
                      <div class="feature-left animate-box " data-animate-effect="fadeInLeft">
                         <span class="icon">
                             <i class="icon-cloud"></i>
@@ -66,7 +71,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-xs-4">
                     <div class="feature-left animate-box " data-animate-effect="fadeInLeft">
                         <span class="icon">
                             <i class="icon-cloud"></i>
@@ -76,7 +81,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-xs-4">
                     <div class="feature-left animate-box " data-animate-effect="fadeInLeft">
                         <span class="icon">
                             <i class="icon-cloud"></i>
@@ -90,7 +95,7 @@
 
 
             <div class="row" style="margin-top:3em;">
-                <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated">
+                <div class="col-xs-8 col-xs-offset-2 text-center heading-section animate-box fadeInUp animated">
                     <h4>就业培训</h4>
                     <p>海外就业培训是执行美国职业移民(EB-3)计划重要的一环，恒心将为有海外就业或职业移民意向的个人进行评测分流，并根据个人的技能匹配美国相应学校进行短期语言技能与职业技能培训，培训结束后，个人即可凭个人意愿在当地就业，并办理落户，展开美国生活。</p>
                 </div>
@@ -101,7 +106,7 @@
                 </div>
             </div>
             <div class ="row" style="padding-top:1em;">
-                <div class="col-md-6 col-md-offset-3">
+                <div class="col-xs-6 col-xs-offset-3">
                         <div class="hexoco-project-item">
                             <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
                             <div class="hexoco-text">
